# internal/server/api/http/generated/types.gen.go
@@ -3,11 +3,16 @@
 // Code generated by github.com/deepmap/oapi-codegen version (devel) DO NOT EDIT.
 package generated
 
+// AcceptInvitationRequest defines model for AcceptInvitationRequest.
+type AcceptInvitationRequest struct {
+	PublicKey string `json:"publicKey"`
+}
+
 // AuthToken defines model for AuthToken.
 type AuthToken string
 
-// CreateKeystoreInvitationRequest defines model for CreateKeystoreInvitationRequest.
-type CreateKeystoreInvitationRequest struct {
+// CreateInvitationRequest defines model for CreateInvitationRequest.
+type CreateInvitationRequest struct {
 	InviteeId string `json:"inviteeId"`
 	PublicKey string `json:"publicKey"`
 }
@@ -16,6 +21,11 @@ type CreateKeystoreInvitationRequest struct {
 type Error struct {
 	Code    string `json:"code"`
 	Message string `json:"message"`
+}
+
+// FinalizeInvitationRequest defines model for FinalizeInvitationRequest.
+type FinalizeInvitationRequest struct {
+	KeystoreKey string `json:"keystoreKey"`
 }
 
 // Invitation defines model for Invitation.
@@ -32,11 +42,23 @@ type LoginRequest struct {
 // LoginJSONBody defines parameters for Login.
 type LoginJSONBody LoginRequest
 
-// CreateKeystoreInvitationJSONBody defines parameters for CreateKeystoreInvitation.
-type CreateKeystoreInvitationJSONBody CreateKeystoreInvitationRequest
+// AcceptInvitationJSONBody defines parameters for AcceptInvitation.
+type AcceptInvitationJSONBody AcceptInvitationRequest
+
+// FinalizeInvitationJSONBody defines parameters for FinalizeInvitation.
+type FinalizeInvitationJSONBody FinalizeInvitationRequest
+
+// CreateInvitationJSONBody defines parameters for CreateInvitation.
+type CreateInvitationJSONBody CreateInvitationRequest
 
 // LoginJSONRequestBody defines body for Login for application/json ContentType.
 type LoginJSONRequestBody LoginJSONBody
 
-// CreateKeystoreInvitationJSONRequestBody defines body for CreateKeystoreInvitation for application/json ContentType.
-type CreateKeystoreInvitationJSONRequestBody CreateKeystoreInvitationJSONBody
+// AcceptInvitationJSONRequestBody defines body for AcceptInvitation for application/json ContentType.
+type AcceptInvitationJSONRequestBody AcceptInvitationJSONBody
+
+// FinalizeInvitationJSONRequestBody defines body for FinalizeInvitation for application/json ContentType.
+type FinalizeInvitationJSONRequestBody FinalizeInvitationJSONBody
+
+// CreateInvitationJSONRequestBody defines body for CreateInvitation for application/json ContentType.
+type CreateInvitationJSONRequestBody CreateInvitationJSONBody
